# pdf-shard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY.md  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml
apps/shard/src-tauri/: Cargo.toml  tauri.conf.json
apps/shard/src-tauri/capabilities/: default.json
apps/shard/src-tauri/icons/: icon.icns
apps/shard/src-tauri/src/: lib.rs  main.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/core-render/: Cargo.toml
crates/core-render/src/: lib.rs
crates/corpus-gen/: Cargo.toml
crates/corpus-gen/src/: main.rs
crates/render-check/: Cargo.toml
crates/render-check/src/: main.rs
docs/: CNAME  PLAN.md  index.html
scripts/: fetch-pdfium.ps1  fetch-pdfium.sh
ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx
ui/src/components/: PageList.tsx  PasswordDialog.tsx  SearchBar.tsx  Sidebar.tsx  StartScreen.tsx  TabBar.tsx  Toolbar.tsx
ui/src/lib/: platform.ts  protocol.ts  tauri.ts
ui/src/state/: document.ts  theme.ts
ui/src/strings/: es.test.ts  es.ts
ui/src/theme/: tokens.css
