[workspace]
resolver = "2"
members = [
    "crates/core-model",
    "crates/core-render",
    "crates/corpus-gen",
    "crates/render-check",
    "apps/shard/src-tauri",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/camilo-ojedav/pdf-shard"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
