[package]
name = "shard"
version = "0.0.1"
description = "PDF SHARD — editor PDF open source, multiplataforma y 100% offline"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "shard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
core-model = { path = "../../../crates/core-model" }
core-render = { path = "../../../crates/core-render" }
